Added numberOfConfigs test and added new model